<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/password"

            android:hint="@string/Password"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
   
   <ProgressBar
       android:id="@+id/progressBar3"
       android:visibility="gone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
   
    <Button
        android:id="@+id/btn_register"
        android:text="@string/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
