<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1D6D6A6A">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cardview_dark_background" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_marginBottom="-2dp" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="How can I help you?"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="32dp" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="3dp"
        android:padding="8dp">


        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/send_btn"
            android:background="@drawable/rounded_corner"
            android:hint="@string/write_here"
            android:padding="16dp" />

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:padding="8dp"
            android:src="@drawable/baseline_send_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context= ".MainActivity">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Hello World!"
            android:textColor="@color/white"/>





    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context= ".MainActivity">
        <Button
            android:id="@+id/logout"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="460dp"
            android:layout_marginStart="275dp"
            android:backgroundTint="#0A3D33"
            android:text="@string/logout"
            android:textColor="@color/white"


            />

</LinearLayout>

</RelativeLayout>

